--- a/index.ipynb
+++ b/index.ipynb
@@ -28,11 +28,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose\n",
+       "0   4.2   VC   0.5\n",
+       "1  11.5   VC   0.5\n",
+       "2   7.3   VC   0.5\n",
+       "3   5.8   VC   0.5\n",
+       "4   6.4   VC   0.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"ToothGrowth.csv\")\n",
+    "df.head()"
    ]
   },
   {
@@ -46,11 +125,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(supp)</th>\n",
+       "      <td>205.350000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.446768</td>\n",
+       "      <td>1.300662e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dose</th>\n",
+       "      <td>2224.304298</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>123.988774</td>\n",
+       "      <td>6.313519e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>1022.555036</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sum_sq    df           F        PR(>F)\n",
+       "C(supp)    205.350000   1.0   11.446768  1.300662e-03\n",
+       "dose      2224.304298   1.0  123.988774  6.313519e-16\n",
+       "Residual  1022.555036  57.0         NaN           NaN"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formula = \"len ~ C(supp) + dose\"\n",
+    "lm = ols(formula,df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "table"
    ]
   },
   {
@@ -66,7 +224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Your comment here"
+    "#Your comment here\n",
+    "\n",
+    "Dosage and Supplement are both impactful."
    ]
   },
   {
@@ -80,11 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "oj_lengths = df[df.supp=='OJ']['len']\n",
+    "vc_lengths = df[df.supp=='VC']['len']"
    ]
   },
   {
@@ -96,11 +258,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups."
+    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups.\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "#FUNCTIONS FROM EARLIER LAB\n",
+    "def welch_t(a, b):\n",
+    "    \"\"\" Calculate Welch's t statistic for two samples. \"\"\"\n",
+    "    numerator = a.mean() - b.mean()\n",
+    "    # “ddof = Delta Degrees of Freedom”: the divisor used in the calculation is N - ddof, \n",
+    "    #  where N represents the number of elements. By default ddof is zero.\n",
+    "    denominator = np.sqrt(a.var(ddof=1)/a.size + b.var(ddof=1)/b.size)\n",
+    "    return np.abs(numerator/denominator)\n",
+    "\n",
+    "def welch_df(a, b):\n",
+    "    \"\"\" Calculate the effective degrees of freedom for two samples. This function returns the degrees of freedom \"\"\"\n",
+    "    s1, s2 = a.var(ddof=1), b.var(ddof=1)\n",
+    "    n1, n2 = a.size, b.size\n",
+    "    numerator = (s1/n1 + s2/n2)**2\n",
+    "    denominator = (s1/ n1)**2/(n1 - 1) + (s2/ n2)**2/(n2 - 1)\n",
+    "    return numerator/denominator\n",
+    "\n",
+    "def p_value_welch_ttest(a, b, two_sided=False):\n",
+    "    \"\"\"Calculates the p-value for Welch's t-test given two samples.\n",
+    "    By default, the returned p-value is for a one-sided t-test. \n",
+    "    Set the two-sided parameter to True if you wish to perform a two-sided t-test instead.\n",
+    "    \"\"\"\n",
+    "    t = welch_t(a, b)\n",
+    "    df = welch_df(a, b)\n",
+    "    p = 1-stats.t.cdf(np.abs(t), df)\n",
+    "    if two_sided:\n",
+    "        p = 2*p\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06063450788093383"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value_welch_ttest(oj_lengths, vc_lengths, two_sided=True)"
    ]
   },
   {
@@ -116,13 +329,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(supp)</th>\n",
+       "      <td>205.350000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.668253</td>\n",
+       "      <td>0.060393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>3246.859333</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sum_sq    df         F    PR(>F)\n",
+       "C(supp)    205.350000   1.0  3.668253  0.060393\n",
+       "Residual  3246.859333  58.0       NaN       NaN"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here; conduct an ANOVA F-test of the oj and vc supplement groups.\n",
     "#Compare the p-value to that of the t-test above. \n",
-    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)"
+    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)\n",
+    "formula = 'len ~ C(supp)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "table"
    ]
   },
   {
@@ -136,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +442,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('OJ', 0.5) ('OJ', 1.0) 8.784919055160323e-05\n",
+      "('OJ', 0.5) ('OJ', 2.0) 1.323783877626994e-06\n",
+      "('OJ', 0.5) ('VC', 0.5) 0.00635860676409683\n",
+      "('OJ', 0.5) ('VC', 1.0) 0.04601033257637566\n",
+      "('OJ', 0.5) ('VC', 2.0) 7.196253523966689e-06\n",
+      "('OJ', 1.0) ('OJ', 2.0) 0.03919514204624397\n",
+      "('OJ', 1.0) ('VC', 0.5) 3.655206737285255e-08\n",
+      "('OJ', 1.0) ('VC', 1.0) 0.0010383758722998238\n",
+      "('OJ', 1.0) ('VC', 2.0) 0.09652612338267019\n",
+      "('OJ', 2.0) ('VC', 0.5) 1.3621326289126046e-11\n",
+      "('OJ', 2.0) ('VC', 1.0) 2.3610742028168374e-07\n",
+      "('OJ', 2.0) ('VC', 2.0) 0.9638515887233756\n",
+      "('VC', 0.5) ('VC', 1.0) 6.811017703167721e-07\n",
+      "('VC', 0.5) ('VC', 2.0) 4.681577414622495e-08\n",
+      "('VC', 1.0) ('VC', 2.0) 9.155603056631989e-05\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here; reuse your $t$-test code above to calculate the p-value for a 2-sided $t$-test\n",
     "#for all combinations of the supplement-dose groups listed above. \n",
-    "#(Since there isn't a control group, compare each group to every other group.)"
+    "#(Since there isn't a control group, compare each group to every other group.)\n",
+    "from itertools import combinations\n",
+    "\n",
+    "group_names = []\n",
+    "grouped_df = df.groupby(['supp', 'dose'])['len']\n",
+    "for group in grouped_df:\n",
+    "    group_names.append(group[0])\n",
+    "    \n",
+    "combos = combinations(group_names, 2)\n",
+    "for combo in combos:\n",
+    "    sample1 = grouped_df.get_group(combo[0])\n",
+    "    sample2 = grouped_df.get_group(combo[1])\n",
+    "    p = p_value_welch_ttest(sample1, sample2, two_sided=True)\n",
+    "    print(combo[0], combo[1], p)"
    ]
   },
   {
@@ -203,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
